--- a/style.css
+++ b/style.css
@@ -39,19 +39,57 @@
 /*base styling*/
 
 body {
-  border: 1px solid black;
   display: grid;
   grid-template-columns: 1fr 1.6fr;
-  grid-gap: 16px;
+  grid-gap: 1rem;
 }
 
+/*universal styling*/
+.section_title {
+  margin-bottom: 2rem;
+  font-family: 'sf_pro_displaymedium';
+  /* color: #202224; */
+  color: #393e46;
+}
+
+#profile_pic {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+  width: 8rem;
+  float: right;
+}
+
+/*ABOUT ME SECTION OF THE PAGE*/
 #about_me {
   grid-column: 1/2;
-  border: 2px solid orangered;
+  grid-row: 1/2;
+  padding: 2rem;
+
+  background: #c9c9c9;
 }
+
+#self_intro {
+  background-color: #eeeeee;
+  padding: 1rem;
+  margin: 1rem auto;
+  border-radius: 1rem;
+}
+
+#intro_first_line {
+  font-family: 'sf_pro_textsemibold';
+}
+
+#self_intro p,
+li {
+  font-family: 'sf_pro_textregular';
+  line-height: 1.5rem;
+}
+
 
 #cert_gallery {
   overflow: hidden;
+  border-radius: 1rem;
 }
 
 /*cert gallery section*/
@@ -189,14 +227,136 @@ body {
   }
 }
 
-
+/*PROJECT GALLERY SECTION OF THE PAGE*/
 #project_gallery {
   grid-column: 2/-1;
   grid-row: 1/3;
-  border: 2px solid skyblue;
+  padding: 2rem;
 }
+
+
+#grid_wrapper {
+  display: grid;
+  max-width: 1000px;
+  width: 100%;
+
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-rows: repeat(4, 480px);
+  grid-auto-rows: minmax(480px, auto);
+  grid-gap: 1.5rem;
+}
+
+#bootstrap_documentation {
+  grid-column: 1/-1;
+  background-image: url("https://res.cloudinary.com/zzrot/image/upload/v1538350962/Personal%20Portfolio%20Collection/Personal%20Portfolio%20Site%20Images/bootstrap_4.png");
+}
+
+#macbookpro_configuration {
+  grid-column: 1/3;
+  grid-row: span 2;
+  background-image: url("https://res.cloudinary.com/zzrot/image/upload/v1538552866/Personal%20Portfolio%20Collection/Personal%20Portfolio%20Site%20Images/medium%20article.png");
+}
+
+#tribute_page {
+  background-image: url("https://res.cloudinary.com/zzrot/image/upload/v1541186510/Personal%20Portfolio%20Collection/Personal%20Portfolio%20Site%20Images/tribute_page.png")
+}
+
+#nerdfusionclone {
+  background-image: url("https://res.cloudinary.com/zzrot/image/upload/v1538350962/Personal%20Portfolio%20Collection/Personal%20Portfolio%20Site%20Images/nerdfusion.png");
+}
+
+#tweet_collection {
+  grid-column: 1/3;
+  background-image: url("https://res.cloudinary.com/zzrot/image/upload/v1541187125/Personal%20Portfolio%20Collection/Personal%20Portfolio%20Site%20Images/tweets_collection.png")
+}
+
+.card {
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  box-shadow: 3px 3px 5px 6px #d7d7d7;
+  border-radius: 1rem;
+}
+
+.description {
+  position: absolute;
+  color: white;
+  background: #23b6c7;
+  transition: 1s;
+  bottom: 0px;
+  left: -355px;
+  font-family: 'sf_pro_textsemibold';
+}
+
+h2,
+p {
+  margin: .5rem .5rem;
+}
+
+
+.card:hover .description {
+  transition: 1s;
+  left: 0px;
+}
+
+
+
+
+
+/* project grid media queries*/
+/* @media (max-width: 650px) {
+  #bootstrap_documentation {
+    grid-column: auto;
+  }
+
+  #macbookpro_configuration {
+    grid-column: auto;
+    grid-row: auto;
+  }
+
+  #tweet_collection {
+    grid-column: auto;
+  }
+} */
+
+
+/*===========================*/
 
 footer {
   grid-column: 1/2;
   border: 2px solid purple;
+}
+
+
+/*Media Queries*/
+
+/*when screen width is less than 1100px*/
+@media (max-width:1100px) {
+  #about_me {
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+
+  #profile_pic {
+    float: right;
+  }
+
+  #self_intro p,
+  li {
+    font-size: .9rem;
+    line-height: 1.3rem;
+    letter-spacing: .05rem;
+  }
+
+  #project_gallery {
+    grid-column: 1/-1;
+    grid-row: 2/3;
+  }
+
+  footer {
+    grid-column: 1/-1;
+  }
+
+
 }
