--- a/style.css
+++ b/style.css
@@ -48,8 +48,7 @@ body {
 .section_title {
   margin-bottom: 2rem;
   font-family: 'sf_pro_displaymedium';
-  /* color: #202224; */
-  color: #393e46;
+  color: #202224;
 }
 
 #profile_pic {
@@ -66,14 +65,13 @@ body {
   grid-row: 1/2;
   padding: 2rem;
 
-  background: #c9c9c9;
+  background: #d7d7d7;
 }
 
 #self_intro {
   background-color: #eeeeee;
   padding: 1rem;
   margin: 1rem auto;
-  border-radius: 1rem;
 }
 
 #intro_first_line {
@@ -89,7 +87,6 @@ li {
 
 #cert_gallery {
   overflow: hidden;
-  border-radius: 1rem;
 }
 
 /*cert gallery section*/
@@ -227,6 +224,12 @@ li {
   }
 }
 
+/*contact me section*/
+#contact_inner_div{
+  display: flex;
+  flex-wrap: wrap;
+}
+
 /*PROJECT GALLERY SECTION OF THE PAGE*/
 #project_gallery {
   grid-column: 2/-1;
@@ -276,7 +279,6 @@ li {
   background-size: cover;
   overflow: hidden;
   box-shadow: 3px 3px 5px 6px #d7d7d7;
-  border-radius: 1rem;
 }
 
 .description {
@@ -302,36 +304,9 @@ p {
 
 
 
-
-
-/* project grid media queries*/
-/* @media (max-width: 650px) {
-  #bootstrap_documentation {
-    grid-column: auto;
-  }
-
-  #macbookpro_configuration {
-    grid-column: auto;
-    grid-row: auto;
-  }
-
-  #tweet_collection {
-    grid-column: auto;
-  }
-} */
-
-
-/*===========================*/
-
-footer {
-  grid-column: 1/2;
-  border: 2px solid purple;
-}
-
-
 /*Media Queries*/
 
-/*when screen width is less than 1100px*/
+/*<1100px*/
 @media (max-width:1100px) {
   #about_me {
     grid-column: 1/3;
@@ -353,10 +328,45 @@ footer {
     grid-column: 1/-1;
     grid-row: 2/3;
   }
+}
 
-  footer {
+/*1100px - 1150px*/
+@media(min-width:1100px) and (max-width:1150px){
+  #bootstrap_documentation {
     grid-column: 1/-1;
   }
+  
+  #macbookpro_configuration {
+    grid-column: 1/-1;
+  }
+  
+  #tribute_page {
+    grid-column: 1/-1;
+  }
+  
+  #nerdfusionclone {
+    grid-column: 1/-1;
+  }
+  
+  #tweet_collection {
+    grid-column: 1/-1;
+  }
+}
 
 
+
+/*<650px*/
+@media (max-width: 650px) {
+  #bootstrap_documentation {
+    grid-column: auto;
+  }
+
+  #macbookpro_configuration {
+    grid-column: auto;
+    grid-row: auto;
+  }
+
+  #tweet_collection {
+    grid-column: auto;
+  }
 }
