finish contact me section

--- a/style.css
+++ b/style.css
@@ -226,9 +226,31 @@ li {
 
 /*contact me section*/
 #contact_inner_div{
-  display: flex;
+  display:flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: baseline;
+  align-content:center;
 }
+
+#contact_inner_div a{
+  text-decoration: none;
+  color:#23b6c7;
+  padding: .8rem 1rem;
+  margin-right:.5rem;
+  margin-bottom: .3rem;
+  background-color: #eeeeee;
+}
+
+#contact_inner_div a:hover{
+  transition: background-color 0.8s linear;
+  background-color: #23b6c7;
+  transition: color 0.1s linear;
+  color: white;
+  transition: border .1s linear;
+  border:none;
+}
+
 
 /*PROJECT GALLERY SECTION OF THE PAGE*/
 #project_gallery {
