--- a/style.css
+++ b/style.css
@@ -38,6 +38,15 @@
 
 /*base styling*/
 
+*{
+  margin: 0;
+  box-sizing:border-box;
+}
+p{
+  font-size:16px;
+}
+
+
 body {
   display: grid;
   grid-template-columns: 1fr 1.6fr;
