--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@
 
 *{
   margin: 0;
-  box-sizing:border-box;
+  -webkit-box-sizing:border-box;
+          box-sizing:border-box;
 }
 p{
   font-size:16px;
@@ -48,8 +49,10 @@ p{
 
 
 body {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 1fr 1.6fr;
+  -ms-grid-columns: 1fr 1.6fr;
+      grid-template-columns: 1fr 1.6fr;
   grid-gap: 1rem;
 }
 
@@ -70,7 +73,11 @@ body {
 
 /*ABOUT ME SECTION OF THE PAGE*/
 #about_me {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1/2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
   grid-row: 1/2;
   padding: 2rem;
 
@@ -105,7 +112,8 @@ li {
   margin: 0;
   left: 0;
   width: 500%;
-  animation: 15s cert_gallery infinite;
+  -webkit-animation: 15s cert_gallery infinite;
+          animation: 15s cert_gallery infinite;
 }
 
 #cert_gallery figure img {
@@ -114,66 +122,6 @@ li {
 }
 
 @-webkit-keyframes cert_gallery {
-  0% {
-    left: 0;
-  }
-
-  20% {
-    left: 0;
-  }
-
-  33% {
-    left: -100%;
-  }
-
-  45% {
-    left: -100%;
-  }
-
-  66% {
-    left: -200%;
-  }
-
-  75% {
-    left: -200%;
-  }
-
-  100% {
-    left: -300%;
-  }
-}
-
-@-o-keyframes cert_gallery {
-  0% {
-    left: 0;
-  }
-
-  20% {
-    left: 0;
-  }
-
-  33% {
-    left: -100%;
-  }
-
-  45% {
-    left: -100%;
-  }
-
-  66% {
-    left: -200%;
-  }
-
-  75% {
-    left: -200%;
-  }
-
-  100% {
-    left: -300%;
-  }
-}
-
-@-moz-keyframes cert_gallery {
   0% {
     left: 0;
   }
@@ -248,6 +196,7 @@ li {
   align-items: baseline;
   -ms-flex-line-pack: center;
   align-content: center;
+
   background-color: #d7d7d7;
 }
 
@@ -289,18 +238,22 @@ li {
 /*PROJECT GALLERY SECTION OF THE PAGE*/
 #project_gallery {
   grid-column: 2/-1;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   grid-row: 1/3;
   padding: 2rem;
 }
 
 
 #grid_wrapper {
+  display: -ms-grid;
   display: grid;
   max-width: 1000px;
   width: 100%;
 
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-template-rows: repeat(4, 480px);
+  -ms-grid-rows: (480px)[4];
+      grid-template-rows: repeat(4, 480px);
   grid-auto-rows: minmax(480px, auto);
   grid-gap: 1.5rem;
 }
@@ -311,7 +264,10 @@ li {
 }
 
 #macbookpro_configuration {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-column: 1/3;
+  -ms-grid-row-span: 2;
   grid-row: span 2;
   background-image: url("https://res.cloudinary.com/zzrot/image/upload/v1538552866/Personal%20Portfolio%20Collection/Personal%20Portfolio%20Site%20Images/medium%20article.png");
 }
@@ -325,6 +281,8 @@ li {
 }
 
 #tweet_collection {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-column: 1/3;
   background-image: url("https://res.cloudinary.com/zzrot/image/upload/v1541187125/Personal%20Portfolio%20Collection/Personal%20Portfolio%20Site%20Images/tweets_collection.png")
 }
@@ -334,13 +292,16 @@ li {
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
-  box-shadow: 3px 3px 5px 6px #d7d7d7;
+  -webkit-box-shadow: 3px 3px 5px 6px #d7d7d7;
+          box-shadow: 3px 3px 5px 6px #d7d7d7;
 }
 
 .description {
   position: absolute;
   color: white;
   background: #23b6c7;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
   transition: 1s;
   bottom: 0px;
   left: -355px;
@@ -354,6 +315,8 @@ p {
 
 
 .card:hover .description {
+  -webkit-transition: 1s;
+  -o-transition: 1s;
   transition: 1s;
   left: 0px;
 }
@@ -365,7 +328,11 @@ p {
 /*<1100px*/
 @media (max-width:1100px) {
   #about_me {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
     grid-column: 1/3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
     grid-row: 1/2;
   }
 
@@ -382,6 +349,8 @@ p {
 
   #project_gallery {
     grid-column: 1/-1;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
     grid-row: 2/3;
   }
 }
